feat(databases): added databases via docker + their connections and quieries

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,7 @@ dist
 .pnp.*
 
 config/default.json
+
+docker/postgres/database.env
+docker/postgres/database-data
+docker/postgres/scripts/initdb.sql
