--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   },
   "homepage": "https://github.com/bRRRITSCOLD/uphold-ticker-bot#readme",
   "devDependencies": {
+    "async-child-process": "^1.1.1",
     "jest": "^27.5.1",
     "nock": "^13.2.4"
   },
   "dependencies": {
     "axios": "^0.26.0",
     "config": "^3.3.7",
+    "mongodb": "^4.4.0",
+    "pg": "^8.7.3",
     "postgresql-client": "^1.21.5",
     "signal-exit": "^3.0.7"
   }
