--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,13 @@
       "name": "Jest watch current file",
       "program": "${workspaceFolder}/node_modules/jest/bin/jest",
       "args": [
-        "${fileBasename}",
+        "${relativeFile}",
         "--verbose",
         "-i",
         "--no-cache",
-        "--watchAll"
+        "--watchAll",
+        "--testTimeout",
+        "999999"
       ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
