--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uphold-ticker-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index",
     "test": "jest --testTimeout=999999"
